# coding-assistant

./: coding.ipynb  data.csv  pyproject.toml
