[project]
name = "coding-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "spark rayburn",email = "abhinavdotkulkarni@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers (>=4.48.3,<5.0.0)",
    "datasets (>=3.3.0,<4.0.0)",
    "accelerate (>=1.3.0,<2.0.0)",
    "peft (>=0.14.0,<0.15.0)",
    "torch (>=2.6.0,<3.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "coding_assistant", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
